# pseudodojo

./: README.md  pyproject.toml
.github/workflows/: 02_libxc_install.yml  03_oncvpsp_install.yml  PseudoDojoTests.yml  RunTests.yml  SetupEnv.yml  abinit_install.yml  libxc_install.yml  oncvpsp_install.yml  python_setup.yml  run_tests.yml
tests/testfiles/: H.out
webapp/app/: __init__.py  api.py  config.py  forms.py  pd_scraper.py  routes.py
webapp/app/static/css/: style.css
webapp/app/static/js/: dojo-tools.js
webapp/app/static/json/: files.json  targz.json
webapp/app/static/pseudos/ONCVPSP-PBEsol-FR-PDv0.4/: nc-fr-v0.4_PBEsol_standard_djrepo.tgz  nc-fr-v0.4_PBEsol_standard_psml.tgz  nc-fr-v0.4_PBEsol_standard_upf.tgz  nc-fr-v0.4_PBEsol_stringent_djrepo.tgz  nc-fr-v0.4_PBEsol_stringent_psml.tgz  nc-fr-v0.4_PBEsol_stringent_upf.tgz
webapp/app/static/pseudos/ONCVPSP-PBEsol-SR-PDv0.4/: nc-sr-v0.4_PBEsol_standard_djrepo.tgz  nc-sr-v0.4_PBEsol_stringent_djrepo.tgz
webapp/app/templates/: about.html  contribute.html  faq.html  index.html  inout_files.html  paperlist.html  visual_repr.html
