[tool.poetry]
name = "pseudodojo"
version = "0.1.0"
description = "PseudoDojo is an open-source Python framework for generating and validating pseudopotentials"
authors = ["SurgeArrester <cameron.h@rgreaves.me.uk>", "gmatteo" <@uclouvain.be>]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
