[tool.poetry]
name = "pseudodojo"
version = "0.1.0"
description = "PseudoDojo is an open-source Python framework for generating and validating pseudopotentials"
authors = ["SurgeArrester <cameron.h@rgreaves.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymatgen = "^2023.11.12"
abipy = "^0.9.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
