[tool.poetry]
name = "pseudodojo"
version = "0.1.0"
description = "PseudoDojo is an open-source Python framework for generating and validating pseudopotentials"
authors = ["SurgeArrester <cameron.h@rgreaves.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymatgen = "^2023.11.12"
Flask = "^3.0.0"
Flask-WTF = "^1.2.1"
Flask-RESTful = "^0.3.10"
Flask-Cors = "^4.0.0"
plotly = "^5.17.0"

abipy = { git = "https://github.com/abinit/abipy.git" }

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "pseudodojo"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
